@@ -285,6 +285,12 @@ archetype *get_archetype_struct(void) {
 /*
  * Reads/parses the archetype-file, and copies into a linked list
  * of archetype-structures.
+ * Called through load_archetypes()
+ *
+ * Will discard object in archetypes, those are handled by second_arch_pass().
+ *
+ * @param fp
+ * opened file descriptor which will be used to read the archetypes.
  */
 static void first_arch_pass(FILE *fp) {
     object *op;
@@ -358,43 +364,60 @@ static void first_arch_pass(FILE *fp) {
 /*
  * Reads the archetype file once more, and links all pointers between
  * archetypes.
+ *
+ * This also handles putting items in inventory when defined in archetype.
+ *
+ * @param fp
+ * file fron which to read. Won't be rewinded.
  */
 
 static void second_arch_pass(FILE *fp) {
   char buf[MAX_BUF],*variable=buf,*argument,*cp;
   archetype *at=NULL,*other;
+    object* inv;
 
-  while(fgets(buf,MAX_BUF,fp)!=NULL) {
-    if(*buf=='#')
-      continue;
-    if((argument=strchr(buf,' '))!=NULL) {
-	*argument='\0',argument++;
-	cp = argument + strlen(argument)-1;
-	while (isspace(*cp)) {
-	    *cp='\0';
-	    cp--;
-	}
-    }
-    if(!strcmp("Object",variable)) {
-      if((at=find_archetype(argument))==NULL)
-        LOG(llevError,"Warning: failed to find arch %s\n",argument);
-    } else if(!strcmp("other_arch",variable)) {
-      if(at!=NULL&&at->clone.other_arch==NULL) {
-        if((other=find_archetype(argument))==NULL)
-          LOG(llevError,"Warning: failed to find other_arch %s\n",argument);
-        else if(at!=NULL)
-          at->clone.other_arch=other;
+    while(fgets(buf,MAX_BUF,fp)!=NULL) {
+        if(*buf=='#')
+            continue;
+        if((argument=strchr(buf,' '))!=NULL) {
+            *argument='\0',argument++;
+            cp = argument + strlen(argument)-1;
+            while (isspace(*cp)) {
+                *cp='\0';
+                cp--;
+            }
+        }
+        if(!strcmp("Object",variable)) {
+            if((at=find_archetype(argument))==NULL)
+                LOG(llevError,"Warning: failed to find arch %s\n",argument);
+        } else if(!strcmp("other_arch",variable)) {
+            if(at!=NULL&&at->clone.other_arch==NULL) {
+                if((other=find_archetype(argument))==NULL)
+                    LOG(llevError,"Warning: failed to find other_arch %s\n",argument);
+                else if(at!=NULL)
+                    at->clone.other_arch=other;
+            }
+        } else if(!strcmp("randomitems",variable)) {
+            if(at!=NULL) {
+                treasurelist *tl=find_treasurelist(argument);
+                if(tl==NULL)
+                    LOG(llevError,"Failed to link treasure to arch (%s): %s\n",at->name, argument);
+                else
+                    at->clone.randomitems=tl;
+            }
+        } else if (!strcmp("arch", variable)) {
+            inv = create_archetype(argument);
+            load_object(fp, inv, LO_LINEMODE, 0);
+            if (at) {
+                insert_ob_in_ob(inv, &at->clone);
+                /*LOG(llevDebug, "Put %s in %s\n", inv->name, at->clone.name);*/
+            }
+            else {
+                LOG(llevError, "Got an arch %s not inside an Object.\n", argument);
+                free_object(inv);
+            }
+        }
       }
-    } else if(!strcmp("randomitems",variable)) {
-      if(at!=NULL) {
-        treasurelist *tl=find_treasurelist(argument);
-        if(tl==NULL)
-          LOG(llevError,"Failed to link treasure to arch (%s): %s\n",at->name, argument);
-        else
-          at->clone.randomitems=tl;
-      }
-    }
-  }
 }
 
 #ifdef DEBUG
